deploy/kustomize/overlays/cloud/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docuvate-api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docuvate-web
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docuvate-worker
spec:
  replicas: 2
